fixing html errors
change from multiple ids to one class.
encoded &

--- a/Dasmoto Arts&Crafts/index.html
+++ b/Dasmoto Arts&Crafts/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="Heading">
-      <h1>Dasmoto's Arts & Crafts</h1>
+      <h1>Dasmoto's Arts &amp; Crafts</h1>
     </div>
 
     <div class="Brushes">
@@ -16,7 +16,7 @@
       <h4>Hacksaw Brushes</h4>
       <p>Made of the highest quality oak. Hacksaw brushes are known for their
          weight and ability to hold paint in large amounts. Available in different sizes.
-      <span id="price">Starting at $3.00 / brush</span>
+      <span class="price">Starting at $3.00 / brush</span>
       </p>
     </div>
 
@@ -26,7 +26,7 @@
       <h4>Art Frames (assorted)</h4>
       <p>Assorted frames made of different material, including MDF, birchwood,
          and PDE. Select frames can be sanded and painted according to your needs.
-      <span id="price">Starting at $2.00 / frame</span>
+      <span class="price">Starting at $2.00 / frame</span>
       </p>
     </div>
 
@@ -37,7 +37,7 @@
       <p>Imported paint from Finland. Over 256 colors available in-store, varying
          quantity(1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing
          the finish and longevity of any artwork.
-      <span id="price">Starting at $5.00 / tube</span>
+      <span class="price">Starting at $5.00 / tube</span>
       </p>
     </div>
   </body>
