relative pathing for images
change from complete url to relative pathing

--- a/Dasmoto Arts&Crafts/index.html
+++ b/Dasmoto Arts&Crafts/index.html
@@ -12,7 +12,7 @@
 
     <div class="Brushes">
       <h2 id = "br">Brushes</h2>
-      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/hacksaw.jpeg" alt="Hacksaw Brushes">
+      <img src="resources/images/hacksaw.jpeg" alt="Hacksaw Brushes">
       <h4>Hacksaw Brushes</h4>
       <p>Made of the highest quality oak. Hacksaw brushes are known for their
          weight and ability to hold paint in large amounts. Available in different sizes.
@@ -22,7 +22,7 @@
 
     <div class="Frames">
       <h2 id = "fr">Frames</h2>
-      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/frames.jpeg" alt="Assorted Art Frames">
+      <img src="resources/images/frames.jpeg" alt="Assorted Art Frames">
       <h4>Art Frames (assorted)</h4>
       <p>Assorted frames made of different material, including MDF, birchwood,
          and PDE. Select frames can be sanded and painted according to your needs.
@@ -32,7 +32,7 @@
 
     <div class="Paint">
       <h2 id = "pa">Paint</h2>
-      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/finnish.jpeg" alt="Finnish Paint Tubes">
+      <img src="resources/images/finnish.jpeg" alt="Finnish Paint Tubes">
       <h4>Clean Finnish Paint</h4>
       <p>Imported paint from Finland. Over 256 colors available in-store, varying
          quantity(1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing
